[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Esteak Shapin <esteakshapin@gmail.com>"]
description = ""
name = "stuy-hacks-nuclear"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
python = "^3.7"
flask-debug = "^0.4.3"
[tool.poetry.dev-dependencies]
